@@ -18,6 +18,7 @@
 #cmakedefine01 ENABLE_DETAILS
 #cmakedefine01 ENABLE_DEVICE_ORIENTATION
 #cmakedefine01 ENABLE_DOWNLOAD_ATTRIBUTE
+#cmakedefine01 ENABLE_DRAG_SUPPORT
 #cmakedefine01 ENABLE_DRT
 #cmakedefine01 ENABLE_EVENT_MODE_METATAGS
 #cmakedefine01 ENABLE_FAST_MOBILE_SCROLLING
